2005-07-18  Lluis Sanchez Gual  <lluis@novell.com> 

	* Internal/ProgressMonitoring/BaseProgressMonitor.cs: Store the
	last reported exception object. Added ErrorException property.
	* Services/Tasks/StatusProgressMonitor.cs: Include the exception when
	showing the error dialog.
	* Gui/Dialogs/ErrorDialog.cs: Don't make it modal. There are some
	issues with that.

2005-07-16  John Luke  <john.luke@gmail.com>

	* Gui/Dialogs/ReferenceDialog/ProjectReferencePanel.cs:
	sort by Projet name

2005-07-14  Ben Motmans  <ben.motmans@gmail.com>

	* Gui/Pads/ProjectPad/FolderNodeBuilder.cs:
	#73772, 'remember action' in add files dialog

	* Gui/Pads/OpenTaskView.cs:
	show warnings after errors + sortable column based on task type

	* Services/File/RecentOpen.cs: emit correct event

	* Gui/Pads/SolutionPad/TreeViewPad.cs:
	make sure the parent node of the currently edited node is expanded

	* Services/DefaultLoggingService.cs: make sure log4net is always 
	configured, even if the .config file doesn't exist

2005-07-13  Lluis Sanchez Gual  <lluis@novell.com> 

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs:
	* Gui/Workbench/Layouts/SdiWorkspaceWindow.cs:
	* Gui/Workbench/DefaultWorkbench.cs:
	* Commands/AutostartCommands.cs: Don't abuse ShowAll().
	
	* Gui/Dialogs/NewProjectDialog.cs: Use a default icon for the template
	if none is provided.
	
	* Gui/Dialogs/CombineOptionsDialog.cs:
	* Gui/Dialogs/ProjectOptionsDialog.cs: IConfiguration can't be renamed
	anymore, so to change the name, a copy has to be made.
	
	* Gui/Pads/SolutionPad/TreeViewPad.cs: ExpandToNode should not expand
	the current node, only the parents.
	
	* Gui/Pads/SolutionPad/NodeState.cs: Save/restore the selected node in the
	node state tree.
	
	* Gui/Pads/HelpBrowser/HelpViewer.cs:
	* Gui/Pads/HelpBrowser/MonodocTreePad.cs:
	* Gui/Pads/DefaultMonitorPad.cs:
	* Gui/Pads/TerminalPad.cs:
	* Gui/Pads/OpenTaskView.cs: The responsibility of showing the widgets of