@@ -1,3 +1,8 @@
+2005-07-18  Lluis Sanchez Gual  <lluis@novell.com>
+
+	* Gui/Pads/ProjectPad/FolderNodeBuilder.cs: When adding an existing
+	file to the project ask if it needs to be replaced.
+
 2005-07-18  Lluis Sanchez Gual  <lluis@novell.com> 
 
 	* Internal/ProgressMonitoring/BaseProgressMonitor.cs: Store the
